# mono_vo_py

./: .gitignore  LICENSE  README.md  mono_vo.py
config/: EuRoC.yaml
mono_vo_py/: mono_vo.py  requirements.txt
mono_vo_py/config/: TUM_RGBD.yaml  kitti_odom.yaml
mono_vo_py/data_loaders/: euroc_loader.py  kitti_loader.py
mono_vo_py/utils/: pose_utils.py
movo_vo/: CMakeLists.txt
results/: KITTI-09-traj_est.txt  KITTI09-traj_est.txt  TUM-09-traj_est.txt
results/KITTI/: 00-traj_est.txt  09-traj_est.txt
results/KITTI/00/KITTI/: 00-traj_est.txt
results/KITTI/06/KITTI/: 06-traj_est.txt
results/KITTI/09/KITTI/: 09-traj_est.txt
results/Replica/office0/Replica/: office0-traj_est.txt
results/Replica/room0/Replica/: room0-traj_est.txt
results/Replica/room2/Replica/: room2-traj_est.txt
results/example_trajs/: 09-no-online.txt  09-online.txt  10-no-online.txt  10-online.txt  kitti_formated_09.txt  kitti_formated_10.txt  sfml_09.txt  sfml_10.txt
tests/: test_triangulation.py
utils/: pose_utils.py
vslam_minimum/: evaluete.py
vslam_minimum/include/: backend.hpp  io.hpp
vslam_minimum/src/: mono.cpp
